# OS_LR_4

./: README.md
doc/: 212_Kutsenko_3.docx
src/: CMakeLists.txt  dynamic.c  impl1.c  impl2.c  lib.h  static.c
